<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="?attr/colorComply"
        android:id="@+id/toolbar"
        android:background="?attr/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_centerVertical="true"
                android:singleLine="true"
                android:imeOptions="actionSearch"
                android:id="@+id/et_search"
                android:maxLines="1"
                android:layout_toStartOf="@id/tv_search"
                android:hint="@string/search"
                android:textColorHint="?attr/colorTextHint"
                android:textColor="?attr/colorTextHigh"
                android:background="@drawable/edit_back"
                android:layout_width="match_parent"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_height="30dp"/>

            <TextView
                android:textColor="?attr/colorComply"
                android:padding="16dp"
                android:gravity="center"
                android:id="@+id/tv_search"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:text="@string/go"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

        </RelativeLayout>



    </androidx.appcompat.widget.Toolbar>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:padding="8dp"
                    android:textSize="15sp"
                    android:textColor="?attr/colorTextHigh"
                    android:text="@string/most_searched"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


                <androidx.recyclerview.widget.RecyclerView
                    android:overScrollMode="never"
                    android:id="@+id/recycler_most"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:padding="8dp"
                        android:textSize="15sp"
                        android:textColor="?attr/colorTextHigh"
                        android:text="@string/search_history"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/tv_clear"
                        android:background="@drawable/back_ripple"
                        android:layout_alignParentEnd="true"
                        android:padding="8dp"
                        android:textSize="15sp"
                        android:textColor="?attr/colorTextMedium"
                        android:text="@string/clear_history"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>



                <androidx.recyclerview.widget.RecyclerView
                    android:overScrollMode="never"
                    android:id="@+id/recycler_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <RelativeLayout
                android:visibility="gone"
                android:id="@+id/relative_suggest"
                android:background="#4D000000"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <androidx.recyclerview.widget.RecyclerView
                    android:overScrollMode="never"
                    android:id="@+id/suggest_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:overScrollMode="never"
                android:background="?attr/colorWindowsBackground"
                android:visibility="gone"
                android:id="@+id/recycler_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>


        </RelativeLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</LinearLayout>