<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        app:titleTextColor="?attr/colorComply"
        android:id="@+id/toolbar"
        android:background="?attr/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"/>

    <cn.heyanle.bannerview.BannerScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                app:cardElevation="8dp"
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <cn.heyanle.bannerview.BannerView
                        android:id="@+id/banner"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"/>

                    <cn.heyanle.bannerview.DotLinear
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:id="@+id/dot_linear"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                app:cardElevation="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:gravity="start"
                        android:textSize="15sp"
                        android:layout_margin="8dp"
                        android:textColor="?attr/colorPrimary"
                        android:text="@string/search"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <RelativeLayout
                        android:id="@+id/relative_text_search"
                        android:background="?attr/selectableItemBackground"
                        android:layout_width="match_parent"
                        android:layout_height="60dp">

                        <ImageView
                            android:layout_margin="20dp"
                            android:layout_centerVertical="true"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_search_black_24dp"/>

                        <TextView
                            android:textColor="?attr/colorTextHigh"
                            android:layout_marginStart="60dp"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_search"
                            tools:ignore="RelativeOverlap" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/relative_image_search"
                        android:background="?attr/selectableItemBackground"
                        android:layout_width="match_parent"
                        android:layout_height="60dp">

                        <ImageView
                            android:layout_margin="20dp"
                            android:layout_centerVertical="true"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_image_black_24dp"/>

                        <TextView
                            android:textColor="?attr/colorTextHigh"
                            android:layout_marginStart="60dp"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/image_search"
                            tools:ignore="RelativeOverlap" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/relative_voice_search"
                        android:background="?attr/selectableItemBackground"
                        android:layout_width="match_parent"
                        android:layout_height="60dp">

                        <ImageView
                            android:layout_margin="20dp"
                            android:layout_centerVertical="true"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_keyboard_voice_black_24dp"/>

                        <TextView
                            android:textColor="?attr/colorTextHigh"
                            android:layout_marginStart="60dp"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/voice_search"
                            tools:ignore="RelativeOverlap" />

                    </RelativeLayout>


                </LinearLayout>



            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                app:cardElevation="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:gravity="start"
                        android:textSize="15sp"
                        android:layout_margin="8dp"
                        android:textColor="?attr/colorPrimary"
                        android:text="@string/setting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <RelativeLayout
                        android:id="@+id/relative_theme"
                        android:background="?attr/selectableItemBackground"
                        android:layout_width="match_parent"
                        android:layout_height="60dp">

                        <ImageView
                            android:layout_margin="20dp"
                            android:layout_centerVertical="true"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_style_black_24dp"/>

                        <TextView
                            android:textColor="?attr/colorTextHigh"
                            android:layout_marginStart="60dp"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/theme"
                            tools:ignore="RelativeOverlap" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/relative_language"
                        android:background="?attr/selectableItemBackground"
                        android:layout_width="match_parent"
                        android:layout_height="60dp">

                        <ImageView
                            android:layout_margin="20dp"
                            android:layout_centerVertical="true"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_language_black_24dp"/>

                        <TextView
                            android:textColor="?attr/colorTextHigh"
                            android:layout_marginStart="60dp"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/language"
                            tools:ignore="RelativeOverlap" />

                    </RelativeLayout>


                </LinearLayout>



            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </cn.heyanle.bannerview.BannerScrollView>







</LinearLayout>